dev/frontend_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-web-app
  labels:
    app: frontend-web-app
    environment: dev
    tier: frontend
  namespace: k8s-training-apps-dev
spec:
  selector:
    app: frontend-web-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 4200
